Bug fixes of the article section (#131)
# Bugs fixed in this PR
* Article Overview: Fixed squashed image of the featured article
* Article Overview: Dividing lines wear too thick, reduced them to 1px
* Article Overview: Had no max width, added that
* Article Overview: The featured article was also supposed to be in a grid, where the image spans 2 columns
* Article Overview: Defined the aspect ratio of the images in tailwind, rather than with pixel values
* Article Overview: The spacing between elements was wrong in tablet size
* Article Overview: The images of the normal articles should always be 2:1 aspect ratio. Defined that aspect ratio in tailwind
* Article Overview:  The top margin was too small.

* Article: Removed Link and cursor pointer from title since that didn't do anything
* Article: Fixed the title size and made it responsive
* Article: Made all fonts responsive
* Article: Header Image was the wrong aspect ratio. Defined the aspect ratio in tailwind
* Article: space between elements wasn't correct
* Article: The prose class was added to the whole site. Removed that and added it only to the article as is intended
* Article: The backbutton lead to the wrong page.

* Markdown Styling: The styling was hardcoded in normal css. Removed that and styled in tailwind instead
* Markdown Styling: Added neueux orange to the color of list discs
* Markdown Styling: Added neueux orange to Quoteblock line
* Markdown Styling: Made Quote font lighter
* Markdown Styling: Restyled Codeblock

* Navbar: Items should be bottom aligned, not center
* Navbar: Some of the styling of the navbar was done in normal css. Moved it to global.css and made most of it in tailwind
* Navbar: The line indicating the active link wasnt in the correct spot. Moved it accordingly
* Navbar:  About didn't have an active link. Added that
* Navbar: Subpages should also be indicatet by the active link. Reworked the logic for determining an active link for that

* Mobile Me

--- a/styles/global.css
+++ b/styles/global.css
@@ -92,5 +92,15 @@ ul.nav {
 }
 
 .wrapper{
-  @apply mx-auto max-w-8xl
+  @apply mx-auto max-w-8xl;
+}
+
+.nav-link {
+  @apply font-normal;
+}
+.active {
+  @apply underline font-bold text-gray-900;
+  text-decoration-color: #FF3A02;
+  text-underline-offset: 1.6rem;
+  text-decoration-thickness: 4px;
 }
